[package]
name = "print_bot"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.6.0-rc.1"
log = "0.4"
env_logger = "0.6.1"
libusb = "0.3"
escposify = { git = "https://github.com/Masterchef365/rust-escposify" }
dither = "1.3.6"
image = "0.15.0"
reqwest = "0.9.18"
